2002-11-20  Masao Mutoh  <mutoh@highway.ne.jp>

	* extconf.rb: Remove checking either gdk2 is installed or not.

2002-11-19  OGASAWARA, Takeshi <t-ogs@earth.email.ne.jp>

	* src/rbgtktextbuffer.c: Add Gtk::TextBuffer#get_iter_at_line_offset, #get_iter_at_line_index,
	#get_iter_at_offset, #get_iter_at_line, #bounds, #get_iter_at_mark.
	Collect Gtk::TextBuffer#move_mark_by_name into move_mark, 
	#insert_with_tags_by_name into insert_with_tags, #apply_tag_by_name into apply_tag,
	#remove_tag_by_name into remove_tag.
	* src/rbgtktextiter.c: Add Gtk::TextIter#forward_search, #backward_search, #==.

2002-11-16  OGASAWARA, Takeshi <t-ogs@earth.email.ne.jp>

	* src/rbgtktextbuffer.c: Add Gtk::TextBuffer#apply_tag, #remove_tag, 
	#apply_tag_by_name, #remove_tag_by_name, #remove_all_tags, #start_iter.
	Code cleanup.

2002-11-16  Masao Mutoh  <mutoh@highway.ne.jp>

	* sample/testgtk/liststore.rb, treestore.rb: Add file(but not work yet).

2002-11-16  KUBO Takehiro  <kubo@jiubao.org>

	* src/rbgtkstock.c: Add a file.

2002-11-15  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkseparatormenuitem.c, rbgtkimagemenuitem.c, sample/misc/test.xpm:
	Readd files(I have forgotten them)

2002-11-15  OGASAWARA, Takeshi <t-ogs@earth.email.ne.jp>

	* src/rbgtktexttagtable.c: Add file.
	* src/rbgtktextbuffer.c: Readd Gtk::TextBuffer#create_tag.
	* src/rbgtktexttag.c: Add constants for GtkWrapMode.

2002-11-14  Masao Mutoh  <mutoh@highway.ne.jp>

	* sample/testgtk/progressbar.rb: Follow Ruby/GTK2.

2002-11-13  Masao Mutoh  <mutoh@highway.ne.jp>

	* sample/misc/fileselection.rb: Fix a bug when button is clicked.
	* sample/misc/listview.rb: Follow Ruby/GTK changes.
	* ToDo, BUGS, gtk-config.cygwin: Removed.
	* src/rbgtkwidget.c: Rename Gtk::Widget#activate to #activate? 
	#mnemonic_activate to #mnemonic_activate?
	* src/rbgtktreepath.c: Fix return value of Gtk::TreePath#next. 
	Rename #next to #next?, #prev to #prev?, #up to #up!, #down to #down!