@@ -4,7 +4,7 @@
   rbgtkimage.c -
 
   $Author: mutoh $
-  $Date: 2002/11/09 19:45:36 $
+  $Date: 2002/11/22 14:19:23 $
 
   Copyright (C) 2002 Masao Mutoh
 ************************************************/
@@ -38,6 +38,8 @@ image_initialize(argc, argv, self)
         widget = gtk_image_new();
     } else if (TYPE(arg1) == T_STRING){
         widget = gtk_image_new_from_file(RVAL2CSTR(arg1));
+    } else if (TYPE(arg1) == T_SYMBOL){
+        widget = gtk_image_new_from_stock(rb_id2name(SYM2ID(arg1)), FIX2INT(arg2));
     } else {
         gtype = RVAL2GTYPE(arg1);
         if (gtype == GDK_TYPE_IMAGE){
@@ -48,7 +50,11 @@ image_initialize(argc, argv, self)
         } else if (gtype == GDK_TYPE_PIXMAP){
             widget = gtk_image_new_from_pixmap(GDK_PIXMAP(RVAL2GOBJ(arg1)),
                                                GDK_BITMAP(RVAL2GOBJ(arg2)));
-        } 
+        } else if (gtype == GTK_TYPE_ICON_SET){
+            widget = gtk_image_new_from_icon_set((GtkIconSet*)RVAL2BOXED(arg1, GTK_TYPE_ICON_SET), NUM2INT(arg2));
+        } else if (gtype == GDK_TYPE_PIXBUF_ANIMATION){
+            widget = gtk_image_new_from_animation(GDK_PIXBUF_ANIMATION(RVAL2GOBJ(arg1)));
+        }
     }
     RBGTK_INITIALIZE(self, widget);
     return Qnil;
@@ -65,17 +71,27 @@ image_set(argc, argv, self)
 
     rb_scan_args(argc, argv, "11", &arg1, &arg2);
 
-    gtype = RVAL2GTYPE(arg1);
-    if (gtype == GDK_TYPE_IMAGE){
-        gtk_image_set_from_image(_SELF(self), GDK_IMAGE(RVAL2GOBJ(arg1)),
-                                 GDK_BITMAP(RVAL2GOBJ(arg2)));
-
-    } else if (gtype == GDK_TYPE_PIXBUF){
-        gtk_image_set_from_pixbuf(_SELF(self), GDK_PIXBUF(RVAL2GOBJ(arg1)));
-
-    } else if (gtype == GDK_TYPE_PIXMAP){
-        gtk_image_set_from_pixmap(_SELF(self), GDK_PIXMAP(RVAL2GOBJ(arg1)),
-                                  GDK_BITMAP(RVAL2GOBJ(arg2)));
+    if (TYPE(arg1) == T_STRING){
+        gtk_image_set_from_file(_SELF(self), RVAL2CSTR(arg1));
+    } else if (TYPE(arg1) == T_SYMBOL){
+        gtk_image_set_from_stock(_SELF(self), rb_id2name(SYM2ID(arg1)), FIX2INT(arg2));
+    } else {
+        gtype = RVAL2GTYPE(arg1);
+        if (gtype == GDK_TYPE_IMAGE){
+            gtk_image_set_from_image(_SELF(self), GDK_IMAGE(RVAL2GOBJ(arg1)),
+                                     GDK_BITMAP(RVAL2GOBJ(arg2)));
+        } else if (gtype == GDK_TYPE_PIXBUF){
+            gtk_image_set_from_pixbuf(_SELF(self), GDK_PIXBUF(RVAL2GOBJ(arg1)));
+            
+        } else if (gtype == GDK_TYPE_PIXMAP){
+            gtk_image_set_from_pixmap(_SELF(self), GDK_PIXMAP(RVAL2GOBJ(arg1)),
+                                      GDK_BITMAP(RVAL2GOBJ(arg2)));
+        } else if (gtype == GTK_TYPE_ICON_SET){
+            gtk_image_set_from_icon_set(_SELF(self), 
+                                        (GtkIconSet*)RVAL2BOXED(arg1, GTK_TYPE_ICON_SET), NUM2INT(arg2));
+        } else if (gtype == GDK_TYPE_PIXBUF_ANIMATION){
+            gtk_image_set_from_animation(_SELF(self), GDK_PIXBUF_ANIMATION(RVAL2GOBJ(arg1)));
+        }
     }
 
     return self;
