@@ -1,3 +1,9 @@
+2002-11-22  Masao Mutoh  <mutoh@highway.ne.jp>
+
+	* src/rbgtkimage.c: Gtk::Image#initialize, #set support Gtk::IconSet, 
+	Gtk::PixbufAnimation, Gtk::Stock.
+	* src/sample/misc/stock.rb: Add a file.
+
 2002-11-20  Masao Mutoh  <mutoh@highway.ne.jp>
 
 	* extconf.rb: Remove checking either gdk2 is installed or not.
